--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,47 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+  }
+  
+  ::-webkit-scrollbar {
+    width: 1px;
+    height: 12px;
+
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #1e1e1e;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+    border: 3px solid #1e1e1e;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
+
+  body {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #1e1e1e; 
+  }
+  
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+    .no-scroll {
+    overflow: hidden;
+    height: 100vh;
+  }
+  
+
+  
